2006-03-12 AIDA Shinra <shinra@j10n.org>
* Move $fink_prefix/etc/xinitrc.d/50kinput2.sh to the kinput2 package.
* Small cleanup.
* build.sh: go cd -> go_cd
* sedsrc/kinput2.sh.in: removed
* sedsrc/xmodmap-ja.sh.in: renamed to simple/xmodma-ja.sh

2006-03-07 AIDA Shinra <shinra@j10n.org>
* 2.3 release
* user-ja.info.in: fix Depends

2006-03-07 AIDA Shinra <shinra@j10n.org>
* 2.2 release
* sedsrc/user-ja.el.in: emacs22-carbon-22.0.50.cvs20060118
* sedsrc/utf-8m.el.in: removed as emacs22-carbon has it
* build.sh: use "go cd"

2005-04-07 AIDA Shinra <shinra@j10n.org>
* 2.1 release
* sedsrc/user-ja.el.in: workaround a bug of emacs21-20041117

2005-03-31 AIDA Shinra <shinra@j10n.org>
* 2.0 release
* doc/user-ja.txt: claim to be in public domain

2005-03-30 AIDA Shinra <shinra@j10n.org>
* Change License to Public Domain.
* sedsrc/dot.xinitrc.in: removed
* sedsrc/user-ja-conf.in: ~/.xinitrcは要らなくなったので~/.xinitrcが存在すると
  X11.appを次回起動したとき文句を言うように設定

2005-03-29 AIDA Shinra <shinra@j10n.org>
* build.sh: Remove an extra message.

2005-03-29 AIDA Shinra <shinra@j10n.org>
* build.sh: Fixed "dry-run" feature.

2005-03-25 AIDA Shinra <shinra@j10n.org>
* 1.13 release
* sedsrc/user-ja.csh.in: x$DISPLAY -> $?DISPLAY

2005-03-23 AIDA Shinra <shinra@j10n.org>
* 1.12 release
* sedsrc/user-ja.el.in: ポンド記号などもJISにマッピング

2005-03-22 AIDA Shinra <shinra@j10n.org>
* 1.11 release
* sedsrc/user-ja.el.in: utf-8のギリシア文字などをJISにマッピングする設定に

2005-03-19 AIDA Shinra <shinra@j10n.org>
* 1.10 release
* sedsrc/user-ja.el.in: bugfix

2005-03-19 AIDA Shinra <shinra@j10n.org>
* 1.9 release
* use shinonome font
* user-ja.info: depend on shinonome
* sedsrc/user-ja.el.in: hirakakugo14 is too big. use hirakakugo12 instead.
* etcmlterm/main: iso88591_font_for_usascii=true
* etcmlterm/font: use shinonome for ASCII characters

2005-03-18 AIDA Shinra <shinra@j10n.org>
* 1.8 release
* sedsrc/user-ja.el.in: bugfixes and cosmetic changes.

2005-03-16 AIDA Shinra <shinra@j10n.org>
* 1.7 release