@@ -1,0 +1,11 @@
+You can use or modify or redistribute or do anything to this software
+as if it were in public domain, although Japan's laws do not admit
+to disclaim one's copyright.
+
+As its exception, the user-ja.canna is affected by the copyright of
+NEC Corporation and Canna Project, as it is derived from Canna[1].
+Read canna.COPYRIGHT for more information.
+
+[1] http://canna.sourceforge.jp/
+
+$Id: user-ja.txt,v 1.1.1.1 2005/04/07 12:31:26 aida_s Exp $
