@@ -1,0 +1,61 @@
+The whole distribution is under following license agreements. You must
+agree with both of them to use or distribute Canna.
+
+/* Copyright (c) 2002-2004 Canna Project. All rights reserved.
+ *
+ * Permission to use, copy, modify, distribute and sell this software
+ * and its documentation for any purpose is hereby granted without
+ * fee, provided that the above copyright notice appear in all copies
+ * and that both that copyright notice and this permission notice
+ * appear in supporting documentation, and that the name of the
+ * author and contributors not be used in advertising or publicity
+ * pertaining to distribution of the software without specific, written
+ * prior permission.  The author and contributors no representations
+ * about the suitability of this software for any purpose.  It is
+ * provided "as is" without express or implied warranty.
+ *
+ * THE AUTHOR AND CONTRIBUTORS DISCLAIMS ALL WARRANTIES WITH REGARD TO
+ * THIS SOFTWARE, INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND
+ * FITNESS, IN NO EVENT SHALL THE AUTHOR AND CONTRIBUTORS BE LIABLE FOR
+ * ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER
+ * RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF
+ * CONTRACT, NEGLIGENCE OR OTHER TORTUOUS ACTION, ARISING OUT OF OR IN
+ * CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE. 
+ */
+
+/* Copyright 1990-1997 NEC Corporation, Tokyo, Japan.
+ *
+ * Permission to use, copy, modify, distribute and sell this software
+ * and its documentation for any purpose is hereby granted without
+ * fee, provided that the above copyright notice appear in all copies
+ * and that both that copyright notice and this permission notice
+ * appear in supporting documentation, and that the name of NEC
+ * Corporation not be used in advertising or publicity pertaining to
+ * distribution of the software without specific, written prior
+ * permission.  NEC Corporation makes no representations about the
+ * suitability of this software for any purpose.  It is provided "as
+ * is" without express or implied warranty.
+ *
+ * NEC CORPORATION DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
+ * INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN 
+ * NO EVENT SHALL NEC CORPORATION BE LIABLE FOR ANY SPECIAL, INDIRECT OR
+ * CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF 
+ * USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR 
+ * OTHER TORTUOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR 
+ * PERFORMANCE OF THIS SOFTWARE. 
+ */
+
+Canuum is distributed under GNU GPL. See canuum/README.copyright and
+canuum/COPYRIGHT.
+
+Pubdic+ is distributed under so-called MIT license. See
+dic/ideo/pubdic/COPYRIGHT (in both Japanese and English).
+
+The zipcode dictionaries dic/ideo/words/zipcode.t and
+dic/ideo/words/jigyosyo.t are generated from data available from JAPANPOST.
+Neither JAPANPOST nor Canna Project claim any copyright about the two files.
+
+The tools in misc/zipcode directory is distributed under GNU GPL.
+See misc/zipcode/README.jp and misc/zipcode/COPYING.
+
+($Id: COPYRIGHT,v 1.3 2004/08/06 14:09:53 aida_s Exp $)
