@@ -1,11 +1,53 @@
 user-jaの設定ファイル、コマンド類の説明です。まだ未完成です。
 
-* user-ja-conf
+* <fink_prefix>/bin/user-ja-conf
 日本語用の標準的な設定ファイルをホームディレクトリに作成します。
 以前からあったファイルは~/user-ja-conf-bakに移動されます。
 
-なお、user-jaはpublic domainとします。日本の法律では著作権を
+* <fink_prefix>/etc/app-defaults/ja_JP.UTF-8/Emacs
+X11上のEmacsでXIMを無効にします。
+
+* <fink_prefix>/etc/emacs/site-start.d/90user-ja.el
+Emacsの日本語環境、色、ホイールマウスの設定などを行います。
+
+* <fink_prefix>/etc/gtk/gtkrc.ja_JP.eucjp
+* <fink_prefix>/etc/gtk/gtkrc.ja_JP.utf8
+GTKアプリケーションでのフォントの設定などを行います。
+
+* <fink_prefix>/etc/profile.d/zz90user-ja.sh
+* <fink_prefix>/etc/profile.d/zz90user-ja.csh
+環境変数の設定などを行います。
+
+* <fink_prefix>/etc/xinitrc.d/21xmodmap-ja.sh
+X11でのキーボードの設定を行います。
+
+* <fink_prefix>/share/inputrc
+bash等で使われる設定ファイルです。
+
+* <fink_prefix>/share/user-ja.canna
+日本語入力システムCannaの設定ファイルです。
+Canna標準の辞書(pubdic+)ではなくcannadicを用います。
+
+* <fink_prefix>/share/user-ja/etcmlterm/*
+多言語コンソールmltermの設定ファイルです。
+
+* <fink_prefix>/share/user-ja/skel/*
+user-ja-confがホームディレクトリにコピーする設定ファイルです。
+
+* <fink_prefix>/share/user-ja/xinitrc
+* <fink_prefix>/share/emacs/site-lisp/appleotffonts-ja.el
+後方互換性のために残されているファイルです。
+
+===========================================================
+
+本ソフトウェアはpublic domainとします。日本の法律では著作権を
 放棄することは出来ませんが、public domainと同じように自由に
 扱って結構です。
 
-$Id: user-ja.txt,v 1.2 2005/03/30 16:23:16 shinra Exp $
+ただし、user-ja.cannaは、Canna[1]から派生したファイルであるため、
+日本電気株式会社とCanna Projectの著作権が及びます。
+詳しくはcanna.COPYRIGHT.txtを参照してください。
+
+[1] http://canna.sourceforge.jp/
+
+$Id: user-ja.txt,v 1.1.1.1 2005/04/07 12:31:26 aida_s Exp $
