@@ -1,4 +1,10 @@
 2006-03-12 AIDA Shinra <shinra@j10n.org>
+* Document and copyright
+* doc/COPYRIGHT-en.txt: added
+* doc/canna.COPYRIGHT.txt: added
+* doc/user-ja.txt: per-file descriptions
+
+2006-03-12 AIDA Shinra <shinra@j10n.org>
 * Move $fink_prefix/etc/xinitrc.d/50kinput2.sh to the kinput2 package.
 * Small cleanup.
 * build.sh: go cd -> go_cd
@@ -221,4 +227,4 @@
 2004-04-12 AIDA Shinra <shinra@j10n.org>
 * Initial revision
 
-$Id: ChangeLog,v 1.3 2006/03/07 13:29:10 aida_s Exp $
+$Id: ChangeLog,v 1.4 2006/03/12 11:01:51 aida_s Exp $
